--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "hash-with-dependencies",
   "version": "0.1.0",
-  "homepage": "http://sebastianjmorgan.com/hashmap/app/",
+  "homepage": "http://sebastianmorgan951.github.io/HashMapVisualizerDeployed",
   "private": true,
   "dependencies": {
     "@babel/core": "7.12.3",
@@ -81,6 +81,8 @@
     "workbox-webpack-plugin": "5.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
     "test": "node scripts/test.js"
@@ -159,5 +161,8 @@
     "presets": [
       "react-app"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.1.0"
   }
 }
